2022-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	BZ 27481
	* etc/hacking.org: Fix spelling mistakes.
	* NEWS: Likewise.
	* ChangeLog: Likewise.
	* doc/poke.texi: Likewise.
	* etc/parse-valgrind-suppressions.sh: Likewise.
	* etc/poke.rec: Likewise.
	* libpoke/ios.h: Likewise.
	* libpoke/pkl-gen.pks: Likewise.
	* libpoke/pkl-trans.c: Likewise.
	* libpoke/pkl-gen-builtins.pks: Likewise.
	* libpoke/pkl-promo.c: Likewise.
	* libpoke/pkl-asm.pks: Likewise.
	* libpoke/std.pk: Likewise.
	* libpoke/ios-dev-stream.c: Likewise.
	* libpoke/ras: Likewise.
	* libpoke/pvm.h: Likewise.
	* libpoke/pkl-gen.h: Likewise.
	* libpoke/pkl-anal.c: Likewise.
	* libpoke/pkl-typify.c: Likewise.
	* libpoke/ios-buffer.c: Likewise.
	* libpoke/pkl-fold.c: Likewise.
	* libpoke/ios-dev-mem.c: Likewise.
	* libpoke/pkl-tab.y: Likewise.
	* libpoke/pkl-ast.h: Likewise.
	* libpoke/pvm.jitter: Likewise.
	* libpoke/pkl-gen.c: Likewise.
	* libpoke/pvm-val.c: Likewise.
	* libpoke/ios.c: Likewise.
	* libpoke/pvm-val.h: Likewise.
	* libpoke/pkl.c: Likewise.
	* pickles/elf-common.pk: Likewise.
	* pickles/asn1-ber.pk: Likewise.
	* pickles/ios.pk: Likewise.
	* pickles/dwarf-pubnames.pk: Likewise.
	* pickles/jffs2.pk: Likewise.
	* poke/pk-cmd-ios.c: Likewise.
	* poke/pk-settings.pk: Likewise.
	* poke/poke.pk: Likewise.
	* poke/pk-map-parser.h: Likewise.
	* poke/poke.c: Likewise.
	* poke/pk-cmd-editor.c: Likewise.
	* poke/pk-help.pk: Likewise.
	* testsuite/poke.repl/repl.exp: Likewise.
	* testsuite/poke.std/std.exp: Likewise.
	* HACKING: Regenerate.

2022-09-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Do not allow casts
	to unions.
	* testsuite/poke.pkl/cast-union-diag-1.pk: New test.
	* testsuite/poke.pkl/cast-union-diag-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Casting Structs): Note that casts to unions are
	not allowed.

2022-09-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (with_temp_ios): Removed as DONE.